--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 **/nbproject/private/
 **/nbproject/Makefile-*.mk
 **/nbproject/Package-*.bash
-**/nbproject/project.*
+**/nbproject/project.properties
 build/
 nbbuild/
 dist/
