--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-j-8.0.33.jar=..\\mysql-connector-j-8.0.33.jar
+file.reference.mysql-connector-j-8.0.33.jar-1=C:\\Users\\savio\\OneDrive\\\u00c1rea de Trabalho\\devweb\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +46,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
